test/files/neg/implicit-any2stringadd-migration.scala
//> using options -Xsource:3

object Test {
  true + "what"
}
